Corrected working directory

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
         zip -r frontend_deploy_package.zip .
 
     - name: Upload API Package
-      working-directory: ./bundle/api
+      working-directory: ./frontend
       run: aws s3 cp frontend_deploy_package.zip s3://466390025412-deploy-bucket
 
     - name: Create New API Version
